--- a/src/FTTBlazor/Shared/NavMenu.razor
+++ b/src/FTTBlazor/Shared/NavMenu.razor
@@ -34,6 +34,12 @@
         </i>
         Select
     </a>
+    <a class="mdl-navigation__link" href="input">
+        <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">
+            mode_edit
+        </i>
+        Input
+    </a>
 
     <div style=" bottom: 0px; position: fixed;">
         <a class="mdl-navigation__link" style="width: 88%;" href="https://github.com/luizgustavo77/FTTBlazor">
