--- a/src/FTTBlazor/Components/Forms/Select/FTTSelect.razor
+++ b/src/FTTBlazor/Components/Forms/Select/FTTSelect.razor
@@ -2,8 +2,8 @@
 
 @if (!string.IsNullOrEmpty(_id))
 {
-    <div class="mdl-cell--@Size-col align-left">
-        <div class="ftt-blazor-components ftt-blazor-select has-float-label @BorderRightCssClass">
+    <div class="mdl-cell--@Size-col ftt-blazor-align-left">
+        <div class="ftt-blazor-components ftt-blazor-select ftt-blazor-has-float-label @BorderRightCssClass">
 
             <select disabled="@_IsReadOnly" aria-disabled="@_IsReadOnly" id="@_id" data-id="@ItemId" @attributes="@attributes" @bind="@ItemId">
                 @if (string.IsNullOrEmpty(ItemId) || ItemId == Guid.Empty.ToString())
