--- a/src/FTTBlazor/Components/Forms/Select/FTTSelectEnums.razor
+++ b/src/FTTBlazor/Components/Forms/Select/FTTSelectEnums.razor
@@ -1,7 +1,7 @@
 ﻿@typeparam T
 
-<div class="mdl-cell--@Size-col align-left">
-    <div class="ftt-blazor-components ftt-blazor-select has-float-label @BorderRightCssClass">
+<div class="mdl-cell--@Size-col ftt-blazor-align-left">
+    <div class="ftt-blazor-components ftt-blazor-select ftt-blazor-has-float-label @BorderRightCssClass">
         <select style="cursor: @StyleIsReadOnly" disabled="@_IsReadOnly" aria-disabled="@_IsReadOnly" id="@_id" data-id="@data_id" @attributes="@attributes" @bind="@Value">
             @if (string.IsNullOrEmpty(Value.ToString()) || Convert.ToInt32(Value) == 0)
             {
