--- a/src/FTTBlazor/Components/Modal/FTTModalInstance.razor
+++ b/src/FTTBlazor/Components/Modal/FTTModalInstance.razor
@@ -1,4 +1,6 @@
-﻿@code {
+﻿@using FTTBlazor.Components.Modal.Service;
+
+@code {
     [CascadingParameter]
     private FTTModal Parent { get; set; }
 
