--- a/src/FTTBlazor/Components/Forms/Input/FTTCalendar.razor
+++ b/src/FTTBlazor/Components/Forms/Input/FTTCalendar.razor
@@ -3,7 +3,7 @@
     @if (!string.IsNullOrEmpty(_id))
     {
         <div class="ftt-blazor-components ftt-blazor-input ftt-blazor-has-float-label">
-            <input type="date" id="@_id" disabled="@_IsReadOnly" style="@StyleReadOnly" @attributes="@attributes" class="@BorderRightCssClass" value="@Value" @onchange="@(e=> { ValueChanged.InvokeAsync((DateTime)e.Value); })" autocomplete="@_id" />
+            <input type="date" id="@_id" disabled="@_IsReadOnly" style="@StyleReadOnly padding-left: 0.3rem; padding-bottom: 0.06rem;" @attributes="@attributes" class="@BorderRightCssClass" value="@Value" @onchange="@(e=> { ValueChanged.InvokeAsync((DateTime)e.Value); })" autocomplete="@_id" />
         </div>
     }
 
