--- a/src/FTTBlazor/Shared/NavMenu.razor
+++ b/src/FTTBlazor/Shared/NavMenu.razor
@@ -40,6 +40,18 @@
         </i>
         Input
     </a>
+    <a class="mdl-navigation__link" href="button">
+        <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">
+            arrow_circle_right
+        </i>
+        Button
+    </a>
+    <a class="mdl-navigation__link" href="link">
+        <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">
+            link
+        </i>
+        Link
+    </a>
 
     <div style=" bottom: 0px; position: fixed;">
         <a class="mdl-navigation__link" style="width: 88%;" href="https://github.com/luizgustavo77/FTTBlazor">
