--- a/src/FTTBlazor/Components/Forms/Link/FTTLink.razor
+++ b/src/FTTBlazor/Components/Forms/Link/FTTLink.razor
@@ -1,39 +1,34 @@
 ﻿@typeparam T
+@using FTTBlazor.Components.Modal;
 
 <div class="mdl-cell--@Size-col ftt-blazor-align-left">
     @if (!string.IsNullOrEmpty(_id))
     {
         <div class="ftt-blazor-components ftt-blazor-input ftt-blazor-has-float-link ftt-blazor-has-float-label" style="min-height: 56px; padding-top: 1em; ">
-            @if (LinkItem != null)
-            {
-                <a style="text-decoration: underline black; cursor:pointer;" class="ftt-blazor-link @BorderRightCssClass" id="@_id" @onclick="@(async(e) => { await OpenModal(); })">
-                    @if (!string.IsNullOrWhiteSpace(LinkItem?.Name) && LinkItem.Name.Length > 20)
-                    {
-                        @(LinkItem.Name.Substring(0, 20) + "...")
-                    }
-                    else
-                    {
-                        @LinkItem.Name
-                    }
-                </a>
-            }
-            else
-            {
-                <a class="ftt-blazor-link @BorderRightCssClass" id="@_id">
-                    @LabelLinkWihtoutItem
-                </a>
-            }
+
+            <a style="text-decoration: underline black; cursor:pointer;" class="ftt-blazor-link @BorderRightCssClass" id="@_id" @onclick="@(e => { DialogIsOpen = true; })">
+                @LabelLink
+            </a>
 
             <label for="@_id">
                 @Title
             </label>
 
-            @if (!string.IsNullOrWhiteSpace(Icon) && LinkItem != null)
+            @if (!string.IsNullOrWhiteSpace(Icon))
             {
-                <button type="button" class="ftt-blazor-input-icon" @onclick="@(async(e) => { await OpenModal(); })">
+                <button type="button" class="ftt-blazor-input-icon" @onclick="@(e => { DialogIsOpen = true; })">
                     <i class="material-icons">@Icon</i>
                 </button>
             }
         </div>
     }
 </div>
+
+<Modal DialogIsOpen="DialogIsOpen" Title="@Title">
+    <Body>
+        @Body
+    </Body>
+    <Footer>
+        @Footer
+    </Footer>
+</Modal>
