--- a/src/FTTBlazor/Components/Modal/Modal.razor
+++ b/src/FTTBlazor/Components/Modal/Modal.razor
@@ -14,12 +14,12 @@
 
 <FTTDialog @bind-IsOpen="@DialogIsOpen">
     <FTTDialogTitle>
-        <div style=" border-bottom: 1px solid var(--brandline);">
+        <div style="width:100%; border-bottom: 1px solid var(--brandline);">
             @Title
         </div>
     </FTTDialogTitle>
     <FTTDialogContent>
-        <div style=" border-bottom: 1px solid var(--brandline);">
+        <div style="width: 100%; border-bottom: 1px solid var(--brandline);">
             @Body
         </div>
     </FTTDialogContent>
